Fix email formatting in index.html

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
   <p>No personal data is collected, stored, or shared by the app.</p>
 
   <p>If you have any questions, contact:<br>
-    aditya.prakash4719@gmail.com
-  </p>
+    aditya.prakash4719@gmail.com</p>
 
 </body>
 </html>
